--- a/Blogy.WebUI/Areas/Admin/Views/Users/AssignRole.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Users/AssignRole.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<AssignRoleDto>
 @{
     ViewData["Title"] = "AssignRole";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/AdminUI/Index.cshtml";
 }
 
 <h1>Rol Ata</h1>
