--- a/Blogy.WebUI/Areas/Admin/Views/Users/Index.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Users/Index.cshtml
@@ -78,6 +78,10 @@
                                         Sil
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="/Admin/Users/AssignRole/@user.Id" class="dropdown-item text-secondary">Rol Ata</a>
+                                </li>
+
                             </ul>
                         </div>
                     </div>
