--- a/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using Blogy.Business.DTOs.CommentDtos
 @using PagedList.Core
 @using PagedList.Core.Mvc
+@using Blogy.Business.DTOs.OurTeamDtos
 
 @using Blogy.Entity.Entities
 
