--- a/Blogy.WebUI/Views/Blog/BlogDetails.cshtml
+++ b/Blogy.WebUI/Views/Blog/BlogDetails.cshtml
@@ -9,7 +9,7 @@
 
 
 
-<div class="site-cover site-cover-sm same-height overlay single-page" style="background-image: url('/myImages/gemini4.png');">
+<div class="site-cover site-cover-sm same-height overlay single-page" style="background-image: url('/myImages/gemini5.png');">
     <div class="container">
         <div class="row same-height justify-content-center">
             <div class="col-md-6">
@@ -94,32 +94,11 @@
                     </ul>
                     <!-- END comment-list -->
 
-                    <div class="comment-form-wrap pt-5">
-                        <h3 class="mb-5">Leave a comment</h3>
-                        <form action="#" class="p-5 bg-light">
-                            <div class="form-group">
-                                <label for="name">Name *</label>
-                                <input type="text" class="form-control" id="name">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email *</label>
-                                <input type="email" class="form-control" id="email">
-                            </div>
-                            <div class="form-group">
-                                <label for="website">Website</label>
-                                <input type="url" class="form-control" id="website">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Post Comment" class="btn btn-primary">
-                            </div>
-
-                        </form>
-                    </div>
+                  
+             
+                @await Component.InvokeAsync("_DoItCommentComponent", new { id = Model.Id })
+                      
+                
                 </div>
 
             </div>
@@ -170,59 +149,6 @@
 
 
 <!-- Start posts-entry -->
-<section class="section posts-entry posts-entry-sm bg-light">
-    <div class="container">
-        <div class="row mb-4">
-            <div class="col-12 text-uppercase text-black">More Blog Posts</div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 col-lg-3">
-                <div class="blog-entry">
-                    <a href="single.html" class="img-link">
-                        <img src="images/img_1_horizontal.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <span class="date">Apr. 14th, 2022</span>
-                    <h2><a href="single.html">Thought you loved Python? Wait until you meet Rust</a></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p><a href="#" class="read-more">Continue Reading</a></p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="blog-entry">
-                    <a href="single.html" class="img-link">
-                        <img src="images/img_2_horizontal.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <span class="date">Apr. 14th, 2022</span>
-                    <h2><a href="single.html">Startup vs corporate: What job suits you best?</a></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p><a href="#" class="read-more">Continue Reading</a></p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="blog-entry">
-                    <a href="single.html" class="img-link">
-                        <img src="images/img_3_horizontal.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <span class="date">Apr. 14th, 2022</span>
-                    <h2><a href="single.html">UK sees highest inflation in 30 years</a></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p><a href="#" class="read-more">Continue Reading</a></p>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-3">
-                <div class="blog-entry">
-                    <a href="single.html" class="img-link">
-                        <img src="images/img_4_horizontal.jpg" alt="Image" class="img-fluid">
-                    </a>
-                    <span class="date">Apr. 14th, 2022</span>
-                    <h2><a href="single.html">Don’t assume your user data in the cloud is safe</a></h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p><a href="#" class="read-more">Continue Reading</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 <!-- End posts-entry -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
