--- a/Blogy.WebUI/Views/Register/SignUp.cshtml
+++ b/Blogy.WebUI/Views/Register/SignUp.cshtml
@@ -54,7 +54,7 @@
                     <div class="p-md-5 p-4 p-lg-0">
                         <div class="text-center mb-4">
                             <h3 class="fs-26 fw-medium" style="margin-bottom: 6px;">Kayıt Ol</h3>
-                            <p class="fs-16 text-secondary lh-1-8">Hesabınız mı var? <a href="#" class="text-primary text-decoration-none">Giriş Yap</a></p>
+                            <p class="fs-16 text-secondary lh-1-8">Hesabınız mı var? <a href="/Login/Index" class="text-primary text-decoration-none">Giriş Yap</a></p>
                         </div>
 
                         <form method="post">
