--- a/Blogy.WebUI/Views/Shared/Components/GetCategoriesAllComponent/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/GetCategoriesAllComponent/Default.cshtml
@@ -9,5 +9,5 @@
     {
         <li><a href="/Blog/GetBlogsByCategory/@item.Id">@item.CategoryName</a></li>
     }
-    <li><a href="/Default/Index">Tüm Bloglara Bak</a></li>
+    <li><a href="/Blog/Index">Tüm Bloglara Bak</a></li>
 </ul>
