--- a/Blogy.WebUI/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using Blogy.Business.DTOs.UserDtos
 @using PagedList.Core
 @using Blogy.Business.DTOs.TagDtos
+@using Blogy.Business.DTOs.OurTeamDtos
 
 
 
