--- a/Blogy.WebUI/Views/Shared/Components/GetAllInfoLoginUserComponent/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/GetAllInfoLoginUserComponent/Default.cshtml
@@ -20,7 +20,7 @@
                     </li>
                     <li>
                         <form class="src-form position-relative">
-                            <input type="text" class="form-control" placeholder="Search here...">
+                            <input type="text" class="form-control" placeholder="Arayınız...">
                             <div class="src-btn position-absolute top-50 start-0 translate-middle-y bg-transparent p-0 border-0">
                                 <span class="material-symbols-outlined">search</span>
                             </div>
@@ -39,10 +39,10 @@
                                 <span class="material-symbols-outlined" style="font-size: 19px;">translate</span>
                             </button>
                             <div class="dropdown-menu dropdown-lg p-0 border-0 dropdown-menu-end">
-                                <span class="fw-medium fs-16 text-secondary d-block title" style="padding-top: 20px; padding-bottom: 20px;">Choose Language</span>
+                                <span class="fw-medium fs-16 text-secondary d-block title" style="padding-top: 20px; padding-bottom: 20px;">Dil Seçiniz</span>
                                 <div class="max-h-275" data-simplebar>
                                     <div class="notification-menu">
-                                        <a href="javascript:void(0);" class="dropdown-item">
+                                        <a href="#" class="dropdown-item">
                                             <div class="d-flex align-items-center">
                                                 <div class="flex-shrink-0">
                                                     <img src="~/adminThema/fila/assets/images/usa.png" class="wh-30 rounded-circle" alt="usa">
@@ -54,7 +54,7 @@
                                         </a>
                                     </div>
                                     <div class="notification-menu">
-                                        <a href="javascript:void(0);" class="dropdown-item">
+                                        <a href="#" class="dropdown-item">
                                             <div class="d-flex align-items-center">
                                                 <div class="flex-shrink-0">
                                                     <img src="~/adminThema/fila/assets/images/australia.png" class="wh-30 rounded-circle" alt="australia">
@@ -66,7 +66,7 @@
                                         </a>
                                     </div>
                                     <div class="notification-menu">
-                                        <a href="javascript:void(0);" class="dropdown-item">
+                                        <a href="#" class="dropdown-item">
                                             <div class="d-flex align-items-center">
                                                 <div class="flex-shrink-0">
                                                     <img src="~/adminThema/fila/assets/images/spain.png" class="wh-30 rounded-circle" alt="spain">
@@ -78,7 +78,7 @@
                                         </a>
                                     </div>
                                     <div class="notification-menu">
-                                        <a href="javascript:void(0);" class="dropdown-item">
+                                        <a href="#" class="dropdown-item">
                                             <div class="d-flex align-items-center">
                                                 <div class="flex-shrink-0">
                                                     <img src="~/adminThema/fila/assets/images/france.png" class="wh-30 rounded-circle" alt="portugal">
@@ -90,7 +90,7 @@
                                         </a>
                                     </div>
                                     <div class="notification-menu mb-0">
-                                        <a href="javascript:void(0);" class="dropdown-item">
+                                        <a href="#" class="dropdown-item">
                                             <div class="d-flex align-items-center">
                                                 <div class="flex-shrink-0">
                                                     <img src="~/adminThema/fila/assets/images/germany.png" class="wh-30 rounded-circle" alt="Germany">
@@ -115,7 +115,7 @@
                     </li>
                     <li class="header-right-item calendar-item">
                         <div class="dropdown notifications">
-                            <a href="calendar.html" class="btn btn-secondary border-0 p-0 position-relative">
+                            <a href="#" class="btn btn-secondary border-0 p-0 position-relative">
                                 <span class="material-symbols-outlined" style="font-size: 19px;">calendar_today</span>
                             </a>
                         </div>
@@ -261,27 +261,27 @@
                                 </div>
                                 <ul class="admin-link mb-0 list-unstyled">
                                     <li>
-                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="my-profile.html">
+                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="/Admin/Staticks/Index">
                                             <i class="material-symbols-outlined">person</i>
-                                            <span class="ms-2">My Profile</span>
+                                            <span class="ms-2">Profilim</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="settings.html">
+                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="/Admin/Profile/Index">
                                             <i class="material-symbols-outlined">settings</i>
-                                            <span class="ms-2">Settings</span>
+                                            <span class="ms-2">Ayarlar</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="tickets.html">
+                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="#">
                                             <i class="material-symbols-outlined">info</i>
-                                            <span class="ms-2">Support</span>
+                                            <span class="ms-2">Destek</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="logout.html">
+                                        <a class="dropdown-item admin-item-link d-flex align-items-center text-body" href="/Default/Index">
                                             <i class="material-symbols-outlined">logout</i>
-                                            <span class="ms-2">Logout</span>
+                                            <span class="ms-2">Çıkış Yap</span>
                                         </a>
                                     </li>
                                 </ul>
