--- a/Blogy.WebUI/Views/Shared/Components/_GetBlogsByCategoryIdComponent/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/_GetBlogsByCategoryIdComponent/Default.cshtml
@@ -5,15 +5,16 @@
 *@
 @foreach (var blog in Model)
 {
-	<div class="blog-entry d-flex blog-entry-search-item">
-		<a href="#" class="img-link me-4">
-			<img src="@blog.CoverImage" alt="Image" class="img-fluid">
-		</a>
-		<div>
-			<span class="date">@blog.CreatedDate.ToShortDateString() <a href="#">@ViewBag.CategoryName</a></span>
-			<h2><a href="#">@blog.Title</a></h2>
-			<p>@(blog.Description.Length > 100 ? blog.Description.Substring(0, 100) + "..." : blog.Description)</p>
-			<p><a href="/Blog/BlogDetails/@blog.Id" class="btn btn-sm btn-outline-primary">Devamını Oku</a></p>
-		</div>
-	</div>
+    <div class="blog-entry d-flex blog-entry-search-item mb-4">
+        <a href="/Blog/BlogDetails/@blog.Id" class="img-link me-4 flex-shrink-0">
+            <img src="@blog.CoverImage" alt="@blog.Title" class="img-fluid"
+                 style="width: 180px; height: 120px; object-fit: cover; border-radius: 6px;">
+        </a>
+        <div>
+            <span class="date text-muted small">@blog.CreatedDate.ToShortDateString() • <span class="text-primary">@ViewBag.CategoryName</span></span>
+            <h4 class="mt-2"><a href="/Blog/BlogDetails/@blog.Id" class="text-dark text-decoration-none">@blog.Title</a></h4>
+            <p class="text-secondary">@(blog.Description.Length > 100 ? blog.Description.Substring(0, 100) + "..." : blog.Description)</p>
+            <p><a href="/Blog/BlogDetails/@blog.Id" class="btn btn-sm btn-outline-primary rounded-pill px-3">Devamını Oku</a></p>
+        </div>
+    </div>
 }
