--- a/Blogy.WebUI/Areas/Admin/Views/Blog/GetBlogsNonCheckedAdmin.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/Blog/GetBlogsNonCheckedAdmin.cshtml
@@ -85,7 +85,7 @@
 
                 <nav class="custom-pagination" aria-label="Page navigation example">
                     <ul class="pagination mb-0 justify-content-center">
-                        <pager asp-action="Index" asp-controller="Blog" list="@Model" options="@customOption"></pager>
+                        <pager asp-action="GetBlogsNonCheckedAdmin" asp-controller="Blog" list="@Model" options="@customOption"></pager>
                     </ul>
                 </nav>
             </div>
