--- a/Blogy.WebUI/Views/AdminUI/Index.cshtml
+++ b/Blogy.WebUI/Views/AdminUI/Index.cshtml
@@ -72,32 +72,32 @@
                    
                 </li>
 
-                
+
 
                 <li class="menu-item">
                     <a href="/Admin/Blog/Index" class="menu-link">
-                        <span class="material-symbols-outlined menu-icon">ballot</span>
+                        <span class="material-symbols-outlined menu-icon">library_books</span>
                         <span class="title">Tüm Bloglar</span>
                     </a>
                 </li>
 
                 <li class="menu-item">
                     <a href="/Admin/Blog/GetBlogsToxic" class="menu-link">
-                        <span class="material-symbols-outlined menu-icon">ballot</span>
+                        <span class="material-symbols-outlined menu-icon">dangerous</span>
                         <span class="title">Toxic Olan Bloglar</span>
                     </a>
                 </li>
 
                 <li class="menu-item">
                     <a href="/Admin/Blog/GetBlogsNonTooxic" class="menu-link">
-                        <span class="material-symbols-outlined menu-icon">ballot</span>
+                        <span class="material-symbols-outlined menu-icon">verified</span>
                         <span class="title">Toxic Olmayan Bloglar</span>
                     </a>
                 </li>
 
                 <li class="menu-item">
                     <a href="/Admin/Blog/GetBlogsNonCheckedAdmin" class="menu-link">
-                        <span class="material-symbols-outlined menu-icon">ballot</span>
+                        <span class="material-symbols-outlined menu-icon">pending_actions</span>
                         <span class="title">Onaylanmayan Bloglar</span>
                     </a>
                 </li>
