--- a/Blogy.WebUI/Views/Shared/Components/_DefaultGetCategoriesWithBlogsComponent/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/_DefaultGetCategoriesWithBlogsComponent/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @model List<ResultCategoryDto>
-
+@using System.Globalization
 
 @*
     default GetCategoriesWithBlogsComponent view
@@ -36,13 +36,18 @@
 
 								<h2><a href="#">@blog.Title</a></h2>
 								<div class="post-meta align-items-center text-left clearfix">
-									<figure class="author-figure mb-0 me-3 float-start"><img src="images/person_1.jpg" alt="Image" class="img-fluid"></figure>
-									<span class="d-inline-block mt-1">By <a href="#">David Anderson</a></span>
-									<span>@blog.CreatedDate.ToShortDateString()</span>
+									<figure class="author-figure mb-0 me-3 float-start"><img src="@blog.Writer.ImageUrl" alt="Image" class="img-fluid"></figure>
+									<span class="d-inline-block mt-1">By <a href="#">@blog.Writer.FullName</a></span>
+									
+
+							    	<span>@blog.CreatedDate.ToString("dd MMMM yyyy • HH:mm", new CultureInfo("tr-TR"))</span>
+
 								</div>
 
 								<p>
-                                    @(blog.Description.Length>100 ? blog.Description.Substring(0,100)+"..." : blog.Description)
+							@Html.Raw(blog.Description.Length > 60
+														? blog.Description.Substring(0, 60) + " ..."
+														: blog.Description) + "."
 								</p>
 								<p><a href="/Blog/BlogDetails/@blog.Id" class="read-more">Devamını Oku</a></p>
 							</div>
