--- a/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -7,6 +7,9 @@
 @using PagedList.Core
 @using PagedList.Core.Mvc
 @using Blogy.Business.DTOs.OurTeamDtos
+@using Blogy.Business.DTOs.SocialMediaDtos
+
+
 
 @using Blogy.Entity.Entities
 
