--- a/Blogy.WebUI/Views/_ViewImports.cshtml
+++ b/Blogy.WebUI/Views/_ViewImports.cshtml
@@ -6,6 +6,7 @@
 @using PagedList.Core
 @using Blogy.Business.DTOs.TagDtos
 @using Blogy.Business.DTOs.OurTeamDtos
+@using Blogy.Business.DTOs.SocialMediaDtos
 
 
 
