--- a/Blogy.WebUI/Views/Blog/BlogDetails.cshtml
+++ b/Blogy.WebUI/Views/Blog/BlogDetails.cshtml
@@ -37,7 +37,7 @@
                     <p>@Html.Raw(Model.Description.Length > 800 
         ? Model.Description.Substring(0, 800) 
         : Model.Description)</p>
-                    <div class="row my-4">
+                    <div class="row my-4 blog-images">
                         <div class="col-md-12 mb-4">
                             <img src="@Model.CoverImage" alt="Image placeholder" class="img-fluid rounded">
                         </div>
@@ -182,5 +182,13 @@
             background: #136a8a; /* Hover olduğunda biraz daha açık mavi */
             transform: scale(1.12);
         }
+
+
+        .blog-images img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
 
 </style>
