--- a/Blogy.WebUI/Views/Shared/Components/_FooterComponet/Default.cshtml
+++ b/Blogy.WebUI/Views/Shared/Components/_FooterComponet/Default.cshtml
@@ -10,82 +10,44 @@
 		<div class="row">
 			<div class="col-lg-4">
 				<div class="widget">
-					<h3 class="mb-4">About</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+					<h3 class="mb-4">Hakkımızda</h3>
+					<p>
+						Blogy’ye hoş geldiniz!
+						Blogy; güncel konuları sade bir dille anlatan, araştırmaya dayalı içerikler sunan ve kullanıcı deneyimini ön planda tutan bir platformdur. Kod örneklerinden rehber yazılarına, sektörel gelişmelerden kişisel deneyimlere kadar geniş bir içerik yelpazesi sunuyoruz.
+					</p>
 				</div> <!-- /.widget -->
 				<div class="widget">
-					<h3>Social</h3>
-					<ul class="list-unstyled social">
-						<li><a href="#"><span class="icon-instagram"></span></a></li>
-						<li><a href="#"><span class="icon-twitter"></span></a></li>
-						<li><a href="#"><span class="icon-facebook"></span></a></li>
-						<li><a href="#"><span class="icon-linkedin"></span></a></li>
-						<li><a href="#"><span class="icon-pinterest"></span></a></li>
-						<li><a href="#"><span class="icon-dribbble"></span></a></li>
-					</ul>
+					<h3>Sosyal Medya Hesaplarımız</h3>
+					@await Component.InvokeAsync("_GetSocialMediasForFooterComponent")
 				</div> <!-- /.widget -->
 			</div> <!-- /.col-lg-4 -->
 			<div class="col-lg-4 ps-lg-5">
 				<div class="widget">
-					<h3 class="mb-4">Company</h3>
+					<h3 class="mb-4">Blogy</h3>
 					<ul class="list-unstyled float-start links">
-						<li><a href="#">About us</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Vision</a></li>
-						<li><a href="#">Mission</a></li>
-						<li><a href="#">Terms</a></li>
-						<li><a href="#">Privacy</a></li>
+						<li><a href="/AboutUs/Index">Hakkımızda</a></li>
+						<li><a href="/Contact/Index">İletişim</a></li>
+						<li><a href="/AboutUs/Index">Vizyon</a></li>
+						<li><a href="/AboutUs/Index">Misyon</a></li>
+						<li><a href="/AboutUs/Index">Şartlar</a></li>
+						<li><a href="/AboutUs/Index">Gizlilik</a></li>
 					</ul>
+
 					<ul class="list-unstyled float-start links">
-						<li><a href="#">Partners</a></li>
-						<li><a href="#">Business</a></li>
-						<li><a href="#">Careers</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="#">Creative</a></li>
+						<li><a href="#">İş Ortakları</a></li>
+						<li><a href="#">İş Dünyası</a></li>
+						<li><a href="#">Kariyer</a></li>
+						<li><a href="/Default/Index">Blog</a></li>
+						<li><a href="#">SSS</a></li>
+						<li><a href="#">Yaratıcı</a></li>
 					</ul>
+
 				</div> <!-- /.widget -->
 			</div> <!-- /.col-lg-4 -->
 			<div class="col-lg-4">
 				<div class="widget">
-					<h3 class="mb-4">Recent Post Entry</h3>
-					<div class="post-entry-footer">
-						<ul>
-							<li>
-								<a href="">
-									<img src="images/img_1_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-									<div class="text">
-										<h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-										<div class="post-meta">
-											<span class="mr-2">March 15, 2018 </span>
-										</div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="">
-									<img src="images/img_2_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-									<div class="text">
-										<h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-										<div class="post-meta">
-											<span class="mr-2">March 15, 2018 </span>
-										</div>
-									</div>
-								</a>
-							</li>
-							<li>
-								<a href="">
-									<img src="images/img_3_sq.jpg" alt="Image placeholder" class="me-4 rounded">
-									<div class="text">
-										<h4>There’s a Cool New Way for Men to Wear Socks and Sandals</h4>
-										<div class="post-meta">
-											<span class="mr-2">March 15, 2018 </span>
-										</div>
-									</div>
-								</a>
-							</li>
-						</ul>
-					</div>
+					<h3 class="mb-4">En Çok Etikete Sahip Bloglar</h3>
+					@await Component.InvokeAsync("_FooterTheMostTagHaveBlogComponent")
 
 
 				</div> <!-- /.widget -->
@@ -102,7 +64,7 @@
 				  -->
 
 				<p>
-					Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a>  Distributed by <a href="https://themewagon.com">ThemeWagon</a> <!-- License information: https://untree.co/license/ -->
+					Copyright &copy;<script>document.write(new Date().getFullYear());</script>. Tüm Hakları Saklıdır. 
 				</p>
 			</div>
 		</div>
