--- a/Blogy.WebUI/Views/WriterUI/Index.cshtml
+++ b/Blogy.WebUI/Views/WriterUI/Index.cshtml
@@ -24,7 +24,7 @@
     <link rel="icon" type="image/png" href="~/adminThema/fila/assets/images/favicon.png">
 
     <!-- Title -->
-    <title>Blogy - Admin Paneli</title>
+    <title>Blogy - Yazar Paneli</title>
 </head>
 <body class="bg-body-bg">
 
@@ -46,7 +46,7 @@
         <div class="logo position-relative d-flex align-items-center justify-content-between">
             <a href="index.html" class="d-block text-decoration-none position-relative">
                 <img src="~/adminThema/fila/assets/images/logo-icon.png" alt="logo-icon">
-                <span class="logo-text text-secondary fw-semibold">Blogy</span>
+                <span class="logo-text text-secondary fw-semibold">Blogy Yazar</span>
             </a>
             <button class="sidebar-burger-menu-close bg-transparent py-3 border-0 opacity-0 z-n1 position-absolute top-50 end-0 translate-middle-y" id="sidebar-burger-menu-close">
                 <span class="border-1 d-block for-dark-burger" style="border-bottom: 1px solid #475569; height: 1px; width: 25px; transform: rotate(45deg);"></span>
@@ -69,7 +69,7 @@
                         <span class="title">İstatiskler</span>
                     </a>
 
-                   
+
                 </li>
 
 
@@ -105,7 +105,7 @@
 
 
 
-    
+
 
                 <li class="menu-item">
                     <a href="/Admin/Users/Index" class="menu-link">
@@ -121,17 +121,17 @@
                     </a>
                 </li>
 
-            
-               
 
-               
+
+
+
 
                 <li class="menu-item">
                     <a href="/Admin/Category/Index" class="menu-link  active">
                         <span class="material-symbols-outlined menu-icon">description</span>
                         <span class="title">Kategoriler</span>
                     </a>
-                    
+
                 </li>
 
                 <li class="menu-item">
@@ -139,7 +139,7 @@
                         <span class="material-symbols-outlined menu-icon">auto_stories</span>
                         <span class="title">Blog Yaz</span>
                     </a>
-                   
+
                 </li>
 
                 <li class="menu-item">
@@ -147,12 +147,12 @@
                         <span class="material-symbols-outlined menu-icon">support</span>
                         <span class="title">Roller</span>
                     </a>
-                   
+
                 </li>
 
-              
 
-              
+
+
 
 
                 <li class="menu-item">
@@ -160,7 +160,7 @@
                         <span class="material-symbols-outlined menu-icon">lock_open</span>
                         <span class="title">Şifre Değiştir</span>
                     </a>
-                    
+
                 </li>
 
 
@@ -186,7 +186,7 @@
                         <span class="title">Sosyal Medya Hesaplarımız</span>
                     </a>
                 </li>
-              
+
 
                 <li class="menu-item">
                     <a href="/Default/Index" class="menu-link">
@@ -304,7 +304,7 @@
     @RenderSection("Scripts", required: false)
 
 
-    
+
 
 
 
