--- a/Blogy.WebUI/Views/UserUI/Index.cshtml
+++ b/Blogy.WebUI/Views/UserUI/Index.cshtml
@@ -46,7 +46,7 @@
         <div class="logo position-relative d-flex align-items-center justify-content-between">
             <a href="index.html" class="d-block text-decoration-none position-relative">
                 <img src="~/adminThema/fila/assets/images/logo-icon.png" alt="logo-icon">
-                <span class="logo-text text-secondary fw-semibold">Blogy Kullanıcı</span>
+                <span class="logo-text text-secondary fw-semibold">Blogy  &#128100; </span>
             </a>
             <button class="sidebar-burger-menu-close bg-transparent py-3 border-0 opacity-0 z-n1 position-absolute top-50 end-0 translate-middle-y" id="sidebar-burger-menu-close">
                 <span class="border-1 d-block for-dark-burger" style="border-bottom: 1px solid #475569; height: 1px; width: 25px; transform: rotate(45deg);"></span>
@@ -64,9 +64,9 @@
                 <li class="menu-title small text-uppercase">
                 </li>
                 <li class="menu-item">
-                    <a href="/Admin/Staticks/Index" class="menu-link  active">
+                    <a href="/User/Staticks/Index" class="menu-link  active">
                         <span class="material-symbols-outlined menu-icon">dashboard</span>
-                        <span class="title">İstatiskler</span>
+                        <span class="title">İstatisklerim</span>
                     </a>
 
 
@@ -75,30 +75,30 @@
 
 
                 <li class="menu-item">
-                    <a href="/Admin/Blog/Index" class="menu-link">
+                    <a href="/User/Blog/Index" class="menu-link">
                         <span class="material-symbols-outlined menu-icon">library_books</span>
-                        <span class="title">Tüm Bloglar</span>
+                        <span class="title">Bloglarım</span>
                     </a>
                 </li>
 
                 <li class="menu-item">
-                    <a href="/Admin/Blog/GetBlogsToxic" class="menu-link">
+                    <a href="/User/Blog/GetBlogsToxic" class="menu-link">
                         <span class="material-symbols-outlined menu-icon">dangerous</span>
-                        <span class="title">Toxic Olan Bloglar</span>
+                        <span class="title">Toxic İşaretli Bloglarım</span>
                     </a>
                 </li>
 
                 <li class="menu-item">
-                    <a href="/Admin/Blog/GetBlogsNonTooxic" class="menu-link">
+                    <a href="/User/Blog/GetBlogsNonTooxic" class="menu-link">
                         <span class="material-symbols-outlined menu-icon">verified</span>
-                        <span class="title">Toxic Olmayan Bloglar</span>
+                        <span class="title">Temiz İçerikli  Bloglarım</span>
                     </a>
                 </li>
 
                 <li class="menu-item">
-                    <a href="/Admin/Blog/GetBlogsNonCheckedAdmin" class="menu-link">
+                    <a href="/User/Blog/GetBlogsNonCheckedAdmin" class="menu-link">
                         <span class="material-symbols-outlined menu-icon">pending_actions</span>
-                        <span class="title">Onaylanmayan Bloglar</span>
+                        <span class="title">Onaylanmayan Bloglarım</span>
                     </a>
                 </li>
 
@@ -107,17 +107,12 @@
 
 
 
-                <li class="menu-item">
-                    <a href="/Admin/Users/Index" class="menu-link">
-                        <span class="material-symbols-outlined menu-icon">perm_contact_calendar</span>
-                        <span class="title">Yazarlar</span>
-                    </a>
-                </li>
+                
 
                 <li class="menu-item">
-                    <a href="/Admin/Comment/Index" class="menu-link">
+                    <a href="/User/Comment/GetUserComment" class="menu-link">
                         <span class="material-symbols-outlined menu-icon">chat</span>
-                        <span class="title">Yorumlar</span>
+                        <span class="title">Yorumlarım</span>
                     </a>
                 </li>
 
@@ -126,29 +121,16 @@
 
 
 
-                <li class="menu-item">
-                    <a href="/Admin/Category/Index" class="menu-link  active">
-                        <span class="material-symbols-outlined menu-icon">description</span>
-                        <span class="title">Kategoriler</span>
-                    </a>
-
-                </li>
+              
 
                 <li class="menu-item">
-                    <a href="/Admin/Blog/CreateBlog" class="menu-link  active">
+                    <a href="/User/Blog/CreateBlog" class="menu-link  active">
                         <span class="material-symbols-outlined menu-icon">auto_stories</span>
                         <span class="title">Blog Yaz</span>
                     </a>
-
                 </li>
 
-                <li class="menu-item">
-                    <a href="/Admin/Role/Index" class="menu-link ">
-                        <span class="material-symbols-outlined menu-icon">support</span>
-                        <span class="title">Roller</span>
-                    </a>
-
-                </li>
+               
 
 
 
@@ -156,7 +138,7 @@
 
 
                 <li class="menu-item">
-                    <a href="/Admin/ChangePassword/Index" class="menu-link  active">
+                    <a href="/User/ChangePassword/ChangePassword" class="menu-link  active">
                         <span class="material-symbols-outlined menu-icon">lock_open</span>
                         <span class="title">Şifre Değiştir</span>
                     </a>
@@ -164,28 +146,24 @@
                 </li>
 
 
-
                 <li class="menu-item">
-                    <a href="/Admin/OurTeam/Index" class="menu-link">
-                        <span class="material-symbols-outlined menu-icon">people</span>
-                        <span class="title">Üyelerimiz</span>
+                    <a href="/User/IWantWriter/Index" class="menu-link">
+                        <span class="material-symbols-outlined menu-icon">edit_square</span>
+                        <span class="title">Yazar Olmak İstiyorum</span>
                     </a>
                 </li>
 
+               
+
 
                 <li class="menu-item">
-                    <a href="/Admin/Profile/Index" class="menu-link">
+                    <a href="/User/Profile/Index" class="menu-link">
                         <span class="material-symbols-outlined menu-icon">account_circle</span>
                         <span class="title">Profil Düzenle</span>
                     </a>
                 </li>
 
-                <li class="menu-item">
-                    <a href="/Admin/SocialMedia/Index" class="menu-link">
-                        <span class="material-symbols-outlined menu-icon">share</span>
-                        <span class="title">Sosyal Medya Hesaplarımız</span>
-                    </a>
-                </li>
+               
 
 
                 <li class="menu-item">
